testing/tests/ui/name_mismatch_endmacro.stderr
error: expected name `foo` in `endmacro` tag, found `not_foo`
       failed to parse template source at row 1, column 41 near:
       "not_foo %}"
 --> tests/ui/name_mismatch_endmacro.rs:3:10
  |
3 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
